--- a/index_conectado_n8n copia.html
+++ b/index_conectado_n8n copia.html
@@ -4,40 +4,87 @@
   <meta charset="UTF-8" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <title>Encuesta Desarroyo Tech</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f8f8f8;
+      background: #10131a;
       padding: 2rem;
       line-height: 1.6;
-      color: #333;
+      color: #eafcff;
+      min-height: 100vh;
+      position: relative;
+      overflow-x: hidden;
+    }
+    .logo-container {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .logo-img {
+      max-width: 300px;
+      width: 100%;
+      height: auto;
+      display: inline-block;
+      filter: drop-shadow(0 0 40px #00fff7) drop-shadow(0 0 10px #a259ff);
+      background: #181c26;
+      border-radius: 20px;
+      padding: 1rem;
+      margin-bottom: 1rem;
+    }
+    h1, h2, h3, h4, h5, h6 {
+      color: #00fff7;
+      text-shadow: 0 0 8px #00fff7, 0 0 16px #a259ff44;
     }
     .container {
       max-width: 800px;
       margin: auto;
-      background: white;
+      background: #181c26;
       padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px #00fff733, 0 0 40px #a259ff22;
     }
-    h1, h2 {
-      color: #222;
+    button, .btn {
+      background: linear-gradient(90deg, #00fff7 0%, #00cfff 50%, #a259ff 100%);
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: background 0.3s, box-shadow 0.3s, transform 0.2s;
+      box-shadow: 0 0 10px #00fff7aa;
     }
-    label {
-      display: block;
-      margin-bottom: 1.5rem;
+    button:hover, .btn:hover {
+      background: linear-gradient(90deg, #a259ff 0%, #00fff7 100%);
+      box-shadow: 0 0 20px #a259ffcc, 0 0 40px #00fff744;
+      transform: scale(1.04);
     }
     input[type="text"], input[type="email"], input[type="tel"], select, textarea {
+      background: #151922;
+      color: #eafcff;
+      border: 1px solid #00fff7;
+      border-radius: 4px;
+      transition: border 0.3s, box-shadow 0.3s;
+      box-shadow: 0 0 6px #00fff733;
       width: 100%;
       padding: 0.5rem;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
+    }
+    input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus, select:focus, textarea:focus {
+      border: 1.5px solid #a259ff;
+      box-shadow: 0 0 12px #a259ff99;
+      outline: none;
+    }
+    textarea {
+      min-height: 100px;
+      resize: vertical;
     }
     small {
-      color: #666;
+      color: #a259ff;
       display: block;
       margin-bottom: 0.5rem;
+      font-size: 1rem;
     }
     .color-preview {
       display: inline-block;
@@ -61,67 +108,65 @@
       transition: all 0.3s ease;
       position: relative;
     }
-    .menu-option:hover, .template-option:hover, .footer-option:hover {
-      border-color: #4CAF50;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .menu-option.selected, .template-option.selected, .footer-option.selected {
-      border-color: #4CAF50;
-      background: #f0fff0;
-    }
-    .menu-option img, .template-option img, .footer-option img {
-      width: 100%;
-      height: auto;
-      border-radius: 4px;
-      margin-bottom: 0.5rem;
-    }
-    .menu-option h4, .template-option h4, .footer-option h4 {
-      margin: 0.5rem 0;
-      color: #2c3e50;
-    }
-    .menu-option p, .template-option p, .footer-option p {
-      margin: 0;
-      font-size: 0.9rem;
-      color: #666;
-    }
-    .menu-option input[type="radio"], .template-option input[type="radio"], .footer-option input[type="radio"] {
-      display: none;
-    }
     .consentimiento {
       margin-top: 2rem;
-      border: 1px solid #dee2e6;
+      border: 1px solid #00fff7;
       border-radius: 8px;
       overflow: hidden;
+      background: #181c26;
+      box-shadow: 0 0 16px #00fff7cc, 0 0 24px #a259ff44;
     }
     .consentimiento-header {
-      background: #f8f9fa;
+      background: #10131a;
       padding: 1rem;
       cursor: pointer;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-bottom: 1px solid #dee2e6;
-    }
-    .consentimiento-header h3 {
-      margin: 0;
-      color: #2c3e50;
+      border-bottom: 1px solid #00fff7;
+      color: #00fff7;
+      font-weight: bold;
+      font-size: 1.1rem;
     }
     .consentimiento-content {
       padding: 0;
       max-height: 0;
       overflow: hidden;
       transition: all 0.3s ease-out;
-      background: #fff;
+      background: #181c26;
+      color: #eafcff;
     }
     .consentimiento-content.active {
       padding: 2rem;
       max-height: 2000px;
+      background: #181c26;
+      color: #eafcff;
     }
     .consentimiento-header .toggle-icon {
       transition: transform 0.3s ease;
     }
     .consentimiento-header.active .toggle-icon {
       transform: rotate(180deg);
+    }
+    .consentimiento-content p[style*="font-weight: bold"] {
+      color: #00fff7 !important;
+      font-weight: bold !important;
+      text-shadow: 0 0 8px #00fff7, 0 0 16px #a259ff44;
+    }
+    .consentimiento-content ul li {
+      color: #eafcff;
+      font-size: 1.05rem;
+      margin-bottom: 0.8rem;
+    }
+    .consentimiento-content ul li strong, .consentimiento-content ul li b {
+      color: #00fff7;
+    }
+    .consentimiento-content ul li::marker, .consentimiento-content ul li:before {
+      color: #00fff7;
+    }
+    .consentimiento-content {
+      border-radius: 0 0 12px 12px;
+      box-shadow: 0 0 16px #00fff7cc, 0 0 24px #a259ff44;
     }
     .modal {
       display: none;
@@ -197,10 +242,132 @@
     .section-instructions strong {
       color: #2c3e50;
     }
+    .neon-important {
+      display: block;
+      background: #181c26;
+      border: 2px solid #00fff7;
+      border-radius: 14px;
+      color: #eafcff;
+      box-shadow: 0 0 24px #00fff7cc, 0 0 40px #a259ff44;
+      padding: 1.2rem;
+      font-size: 1.08rem;
+      font-weight: 500;
+      margin-bottom: 1.5rem;
+    }
+    .menu-option img, .template-option img, .footer-option img {
+      width: 100%;
+      height: 160px;
+      object-fit: contain;
+      background: #10131a;
+      border: 2px solid #00fff7;
+      border-radius: 8px;
+      box-shadow: 0 0 12px #00fff7cc, 0 0 8px #a259ff44;
+      margin-bottom: 0.5rem;
+      transition: box-shadow 0.3s, border 0.3s;
+    }
+    .menu-option img:hover, .template-option img:hover, .footer-option img:hover {
+      box-shadow: 0 0 24px #a259ffcc, 0 0 32px #00fff7cc;
+      border: 2.5px solid #a259ff;
+    }
+    .neon-terms {
+      display: block;
+      margin-top: 2rem;
+      font-weight: bold;
+      padding: 1rem;
+      background: #181c26;
+      border: 2px solid #00fff7;
+      border-radius: 8px;
+      color: #eafcff;
+      box-shadow: 0 0 16px #00fff7cc, 0 0 24px #a259ff44;
+      font-size: 1.05rem;
+      transition: background 0.3s, color 0.3s;
+    }
+    .neon-terms input[type="checkbox"] {
+      accent-color: #00fff7;
+    }
+    #parallax-bg {
+      position: fixed;
+      top: 0; left: 0; width: 100vw; height: 100vh;
+      z-index: 0;
+      pointer-events: none;
+      background: radial-gradient(ellipse at 60% 40%, #00fff733 0%, transparent 70%),
+                  radial-gradient(ellipse at 20% 80%, #a259ff33 0%, transparent 70%),
+                  #10131a;
+      transition: background 0.3s;
+    }
+    .container { position: relative; z-index: 1; }
+    .progress-bar-container {
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    .progress-bar-bg {
+      width: 100%;
+      height: 14px;
+      background: #181c26;
+      border-radius: 8px;
+      box-shadow: 0 0 12px #00fff7cc, 0 0 8px #a259ff44;
+      overflow: hidden;
+      margin-bottom: 0.5rem;
+      border: 2px solid #00fff7;
+      position: relative;
+      z-index: 2;
+    }
+    .progress-bar-neon {
+      height: 100%;
+      width: 0%;
+      background: linear-gradient(90deg, #00fff7 0%, #a259ff 100%);
+      box-shadow: 0 0 16px #00fff7cc, 0 0 24px #a259ff44;
+      border-radius: 8px;
+      transition: width 0.5s cubic-bezier(.4,2,.3,1), box-shadow 0.3s;
+    }
+    .progress-text {
+      color: #00fff7;
+      font-weight: bold;
+      font-size: 1rem;
+      text-shadow: 0 0 8px #00fff7, 0 0 16px #a259ff44;
+      letter-spacing: 1px;
+    }
+    /* Animaciones de entrada */
+    .fade-in-section {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: opacity 0.8s cubic-bezier(.4,2,.3,1), transform 0.8s cubic-bezier(.4,2,.3,1);
+      will-change: opacity, transform;
+    }
+    .fade-in-section.visible {
+      opacity: 1;
+      transform: none;
+    }
+    /* Micro-animaciones en iconos */
+    .zoom-icon {
+      animation: neon-pulse 2s infinite alternate;
+    }
+    @keyframes neon-pulse {
+      0% { filter: drop-shadow(0 0 0 #00fff7); }
+      100% { filter: drop-shadow(0 0 8px #00fff7) drop-shadow(0 0 12px #a259ff); }
+    }
+    /* Feedback visual inmediato en selecciones */
+    .menu-option.selected, .template-option.selected, .footer-option.selected {
+      animation: select-glow 0.5s;
+    }
+    @keyframes select-glow {
+      0% { box-shadow: 0 0 0 #00fff7; }
+      100% { box-shadow: 0 0 24px #00fff7cc, 0 0 32px #a259ff44; }
+    }
   </style>
 </head>
 <body>
+  <div id="parallax-bg"></div>
   <div class="container">
+    <div class="logo-container">
+      <img src="img/A_logo_for_&quot;DesArroyo_Tech&quot;_is_displayed_in_neon_t.png" alt="DesArroyo Tech Logo" class="logo-img" />
+    </div>
+    <div class="progress-bar-container">
+      <div class="progress-bar-bg">
+        <div class="progress-bar-neon" id="progress-bar"></div>
+      </div>
+      <span id="progress-text" class="progress-text">0% completado</span>
+    </div>
     <h1>Encuesta Inteligente para Crear tu Web Ideal</h1>
     <p>Al completar esta encuesta, crearemos automáticamente una primera versión de tu web ideal para ti o tu negocio.</p>
 
@@ -209,20 +376,16 @@
     <p>Solo cuando estés satisfecho y decidas seguir adelante, realizarás el pago y recibirás tu web lista para usar.</p>
 
     <form id="encuesta" style="max-width:800px; margin:0 auto; padding:2rem;">
-      <p style="background:#fff7d1; border:1px solid #f5d441; padding:1rem; border-radius:10px;">
+      <span class="neon-important">
         💡 <strong>Importante:</strong> Todo el proceso es inteligente y serás acompañado en cada paso.<br><br>
-
         Cada sección incluye ejemplos, referencias visuales y explicaciones claras. Al finalizar, nuestro equipo generará tu diseño ideal de forma interna.<br><br>
-
         ⸻<br><br>
-
         ⚠️ <strong>Lo que debes saber antes de comenzar:</strong><br>
         • ⏱️ En 24 horas recibirás una primera muestra por email. Revisa también tu carpeta de spam o papelera.<br>
         • 📩 Deberás confirmar por email la hora exacta en que quieres recibir la versión final.<br>
         • 📲 Nuestro equipo también recibirá tu confirmación para avanzar con la entrega.<br><br>
-
         🔒 Tómate este proceso en serio: esta web será creada 100% a medida para ti.
-      </p>
+      </span>
 
       <label>
         <strong>Nombre completo</strong><br/>
@@ -899,14 +1062,14 @@
         </div>
       </div>
 
-      <label style="display: block; margin-top: 2rem; font-weight: bold; padding: 1rem; background: #f8f9fa; border: 1px solid #dee2e6; border-radius: 8px;">
+      <label class="neon-terms">
         <input type="checkbox" name="acepta_terminos" required style="margin-right: 0.5rem;" />
         He leído y acepto los términos y condiciones anteriores.
       </label>
 
       <input type="hidden" name="estado_inicial" value="Esperando confirmación de entrega" />
 
-      <button type="submit" style="margin-top: 2rem; padding: 1rem 2rem; background: #4CAF50; color: white; border: none; border-radius: 8px; font-size: 1.1rem; cursor: pointer; transition: background 0.3s ease;">Enviar respuestas</button>
+      <button type="submit" style="margin-top: 2rem; padding: 1rem 2rem; background: linear-gradient(90deg, #00fff7 0%, #00cfff 50%, #a259ff 100%); color: #fff; border: none; border-radius: 8px; font-size: 1.1rem; cursor: pointer; transition: background 0.3s, box-shadow 0.3s, transform 0.2s; box-shadow: 0 0 10px #00fff7aa; width: 100%; display: inline-block;">Enviar respuestas</button>
     </form>
     <div id="mensaje-confirmacion" style="display:none; margin-top:2rem; padding:1.5rem; background:#e6ffe6; border:1px solid #b2ffb2; border-radius:8px; color:#155724; font-size:1.2rem;"></div>
   </div>
@@ -1083,6 +1246,59 @@
         e.preventDefault();
         openModal(this.src);
       });
+    });
+
+    // Parallax fondo neón
+    const parallaxBg = document.getElementById('parallax-bg');
+    document.addEventListener('mousemove', function(e) {
+      const x = e.clientX / window.innerWidth;
+      const y = e.clientY / window.innerHeight;
+      parallaxBg.style.background = `radial-gradient(ellipse at ${60 + x*20}% ${40 + y*20}%, #00fff733 0%, transparent 70%),`
+        + `radial-gradient(ellipse at ${20 + x*30}% ${80 - y*20}%, #a259ff33 0%, transparent 70%), #10131a`;
+    });
+
+    // Barra de progreso visual
+    const form = document.getElementById('encuesta');
+    const progressBar = document.getElementById('progress-bar');
+    const progressText = document.getElementById('progress-text');
+    const camposClave = [
+      'nombre_completo', 'email', 'telefono', 'nombre_proyecto', 'sector',
+      'estilos[]', 'color1', 'color2', 'color3', 'fuentes[]', 'logo', 'logo_idea',
+      'portada', 'secciones[]', 'menu_estilo', 'plantilla_estilo', 'footer_estilo',
+      'objetivo', 'redes', 'ref1', 'ref2', 'ref3', 'presupuesto', 'observaciones',
+      'fuente_descubrimiento', 'fecha_entrega_deseada', 'acepta_terminos'
+    ];
+    function calcularProgreso() {
+      let total = camposClave.length;
+      let completados = 0;
+      camposClave.forEach(campo => {
+        if (campo.endsWith('[]')) {
+          const checkboxes = form.querySelectorAll(`[name='${campo}']`);
+          if ([...checkboxes].some(cb => cb.checked)) completados++;
+        } else if (campo === 'logo' || campo === 'portada') {
+          // Opcional: no contar archivos subidos
+          completados++;
+        } else if (campo === 'acepta_terminos') {
+          if (form.querySelector(`[name='${campo}']`).checked) completados++;
+        } else {
+          const el = form.querySelector(`[name='${campo}']`);
+          if (el && el.value && el.value !== '') completados++;
+        }
+      });
+      let percent = Math.round((completados / total) * 100);
+      progressBar.style.width = percent + '%';
+      progressText.textContent = percent + '% completado';
+    }
+    form.addEventListener('input', calcularProgreso);
+    form.addEventListener('change', calcularProgreso);
+    window.addEventListener('DOMContentLoaded', calcularProgreso);
+
+    // Animaciones de entrada para secciones
+    document.querySelectorAll('label, .section-instructions, .neon-important, .neon-terms').forEach((section, i) => {
+      section.classList.add('fade-in-section');
+      setTimeout(() => {
+        section.classList.add('visible');
+      }, 200 + i * 120);
     });
   </script>
 </body>
