📝 Actualizado texto de encuesta para destacar desarrollo con puro HTML - Añadida información sobre puro HTML en el primer y tercer párrafo - Destaca la característica técnica importante para los usuarios

--- a/index_conectado_n8n.html
+++ b/index_conectado_n8n.html
@@ -474,11 +474,11 @@
       <span id="progress-text" class="progress-text">0% completado</span>
     </div>
     <h1>Encuesta Inteligente para Crear tu Web Ideal</h1>
-    <p>Al completar esta encuesta, crearemos automáticamente una primera versión de tu web ideal para ti o tu negocio.</p>
+    <p>Al completar esta encuesta, crearemos automáticamente una primera versión de tu web ideal para ti o tu negocio <strong>desarrollada con puro HTML</strong>.</p>
 
     <p>En solo 24 horas recibirás por email una muestra personalizada. Podrás revisarla tranquilamente y, si deseas hacer ajustes, accederás a una segunda encuesta de mejora. Con tus comentarios, prepararemos una versión final aún más afinada.</p>
 
-    <p>Solo cuando estés satisfecho y decidas seguir adelante, realizarás el pago y recibirás tu web lista para usar.</p>
+    <p>Solo cuando estés satisfecho y decidas seguir adelante, realizarás el pago y recibirás tu web <strong>desarrollada con puro HTML</strong> lista para usar.</p>
 
     <form id="encuesta" style="max-width:800px; margin:0 auto; padding:2rem;">
       <span class="neon-important">
