🚀 Actualizada sección ¿Qué ofrecemos? con portfolio completo de servicios - Añadidos 9 servicios especializados desde webs HTML hasta IoT - Incluye apps móviles, bots, automatizaciones IA, CRM offline - Detalles técnicos específicos para cada servicio - Ancho de contenedor aumentado para mejor legibilidad

--- a/index.html
+++ b/index.html
@@ -451,10 +451,16 @@
     <div class="section-content fade-in-section">
       <h2>¿Qué ofrecemos?</h2>
       <div class="neon-bar"></div>
-      <ul style="list-style: none; padding: 0; text-align: left; max-width: 600px; margin: 2rem auto;">
-        <li style="margin-bottom: 1rem;">✓ Creación automática de webs HTML personalizadas</li>
-        <li style="margin-bottom: 1rem;">✓ Automatizaciones con IA</li>
-        <li style="margin-bottom: 1rem;">✓ Soluciones a medida para emprendedores, artistas y negocios</li>
+      <ul style="list-style: none; padding: 0; text-align: left; max-width: 700px; margin: 2rem auto;">
+        <li style="margin-bottom: 1rem;">✓ Webs HTML ultrarrápidas (entrega en 24 h)</li>
+        <li style="margin-bottom: 1rem;">✓ Webs full-stack con Astro (SSR, Tailwind, animaciones suaves)</li>
+        <li style="margin-bottom: 1rem;">✓ Apps móviles híbridas (PWA / Capacitor, Android + iOS con un solo código)</li>
+        <li style="margin-bottom: 1rem;">✓ Bots personalizados de WhatsApp y Telegram (reservas, soporte, notificaciones)</li>
+        <li style="margin-bottom: 1rem;">✓ Self-Check-in legal para Airbnb y Booking (formulario DNI, firma y aviso automático)</li>
+        <li style="margin-bottom: 1rem;">✓ Automatizaciones con IA (n8n, agentes GPT, pipelines de contenido)</li>
+        <li style="margin-bottom: 1rem;">✓ Servicios online + offline (CRM local-first que se sincroniza cuando hay conexión)</li>
+        <li style="margin-bottom: 1rem;">✓ Prototipado IoT y wearables (Raspberry Pi, AuraClip, sensores, voz integrada)</li>
+        <li style="margin-bottom: 1rem;">✓ Generación automática de contenido (posts, shorts, newsletters sin fricción)</li>
       </ul>
       <p>Email para contacto directo: <a href="mailto:alberto@desarroyo.tech" style="color: #00fff7;">alberto@desarroyo.tech</a></p>
     </div>
