✨ Actualizado título y texto principal con enfoque poético y emocional - Nuevo título: Tu web HTML soñada, lista en 48 h - Texto poético con metáforas andaluzas (poniente, Alhambra, ola) - Enfoque en personalización y autenticidad - Tiempo realista de 48 horas - Diferenciación: No plantillas huecas, sino casa digital personalizada

--- a/index.html
+++ b/index.html
@@ -440,8 +440,12 @@
       <div class="logo-container">
         <img src="img/A_logo_for_&quot;DesArroyo_Tech&quot;_is_displayed_in_neon_t.png" alt="Logotipo DesArroyo Tech en estilo neón con efectos de brillo" class="logo-img" />
       </div>
-      <h1>Creamos tu web ideal en minutos</h1>
-      <p>En DesArroyo.Tech diseñamos webs HTML automáticas a partir de una encuesta inteligente. Nuestro enfoque combina diseño, tecnología y alma para que tengas tu web lista en 24h.</p>
+      <h1>Tu web HTML soñada, lista en 48 h</h1>
+      <p>En DesArroyo.Tech desciframos tu visión mediante una encuesta inteligente —un breve oráculo donde depositas colores, anhelos y el latido de tu negocio. Con ese pulso creamos una web estática en HTML puro, ligera como un soplo de poniente y firme como la piedra de la Alhambra.</p>
+      
+      <p>Durante dos amaneceres hilamos diseño, código y alma para que tu proyecto nazca con rostro propio: rápido, claro y preparado para emocionar. No fabricamos plantillas huecas; forjamos la casa digital donde tu idea puede respirar y crecer.</p>
+      
+      <p>En apenas 48 horas recibirás tu web lista para conquistar al mundo, tan auténtica como tú y tan precisa como la ola que sabe exactamente cuándo besar la orilla.</p>
       <a href="index_conectado_n8n.html" class="btn" target="_blank" aria-label="Abrir encuesta inteligente en nueva pestaña">Rellenar encuesta inteligente</a>
       <button class="scroll-down" aria-label="Ir a la sección de servicios">↓</button>
     </div>
