--- a/index.html
+++ b/index.html
@@ -451,22 +451,27 @@
     </div>
   </section>
 
-  <section id="servicios">
-    <div class="section-content fade-in-section">
-      <h2>¿Qué ofrecemos?</h2>
+  <section id="servicios" class="fade-in-section">
+    <div class="section-content">
+      <h2>Servicios</h2>
       <div class="neon-bar"></div>
-      <ul style="list-style: none; padding: 0; text-align: left; max-width: 700px; margin: 2rem auto;">
-        <li style="margin-bottom: 1rem;">✓ Webs HTML ultrarrápidas (entrega en 24 h)</li>
-        <li style="margin-bottom: 1rem;">✓ Webs full-stack con Astro (SSR, Tailwind, animaciones suaves)</li>
-        <li style="margin-bottom: 1rem;">✓ Apps móviles híbridas (PWA / Capacitor, Android + iOS con un solo código)</li>
-        <li style="margin-bottom: 1rem;">✓ Bots personalizados de WhatsApp y Telegram (reservas, soporte, notificaciones)</li>
-        <li style="margin-bottom: 1rem;">✓ Self-Check-in legal para Airbnb y Booking (formulario DNI, firma y aviso automático)</li>
-        <li style="margin-bottom: 1rem;">✓ Automatizaciones con IA (n8n, agentes GPT, pipelines de contenido)</li>
-        <li style="margin-bottom: 1rem;">✓ Servicios online + offline (CRM local-first que se sincroniza cuando hay conexión)</li>
-        <li style="margin-bottom: 1rem;">✓ Prototipado IoT y wearables (Raspberry Pi, AuraClip, sensores, voz integrada)</li>
-        <li style="margin-bottom: 1rem;">✓ Generación automática de contenido (posts, shorts, newsletters sin fricción)</li>
-      </ul>
-      <p>Email para contacto directo: <a href="mailto:alberto@desarroyo.tech" style="color: #00fff7;">alberto@desarroyo.tech</a></p>
+      <p>
+        Transformamos tus ideas en una presencia online impactante. Desde webs
+        corporativas hasta soluciones de e-commerce y automatizaciones,
+        nuestro enfoque es claro: tecnología con alma, resultados reales.
+      </p>
+    </div>
+  </section>
+
+  <!-- Sección de Automatizaciones -->
+  <section id="automatizaciones" class="fade-in-section">
+    <div class="section-content">
+      <h2>Potencia tu Mundo con Automatizaciones</h2>
+      <div class="neon-bar"></div>
+      <p>
+        Genera automatizaciones para tu negocio o vida personal de manera gratuita con nuestra herramienta. Conecta tus aplicaciones favoritas y desata tu productividad.
+      </p>
+      <a href="generador_automatizaciones.html" class="btn">Crear Automatización Ahora</a>
     </div>
   </section>
 
