--- a/generador_automatizaciones.html
+++ b/generador_automatizaciones.html
@@ -576,6 +576,7 @@
         </div>
     </div>
 
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="chatbot.js"></script>
     <script>
         // Parallax fondo neón
