--- a/index.html
+++ b/index.html
@@ -655,5 +655,8 @@
       </div>
     </div>
   </div>
+
+  <script src="https://js.stripe.com/v3/"></script>
+  <script src="chatbot.js"></script>
 </body>
 </html>
