feat(chatbot): Mejora integral de la interfaz y funcionalidades del chatbot
Se ha rediseñado la interfaz del chatbot con un estilo más moderno y profesional. Se ha mejorado la funcionalidad del botón de enviar, se ha añadido un indicador de carga 'Pensando...' y se ha optimizado la experiencia de usuario general.

--- a/cancel.html
+++ b/cancel.html
@@ -68,16 +68,16 @@
 <body>
     <div class="cancel-container">
         <div class="cancel-icon">❌</div>
-        <h1>Pago Cancelado</h1>
-        <p>El pago ha sido cancelado. No te preocupes, no se ha realizado ningún cargo.</p>
+        <h1>Suscripción Cancelada</h1>
+        <p>El proceso de suscripción ha sido cancelado. No te preocupes, no se ha realizado ningún cargo.</p>
         
-        <h3>💡 ¿Por qué considerar el acceso premium?</h3>
+        <h3>💡 ¿Por qué unirte a DesArroyo.Tech Hub?</h3>
         <ul style="text-align: left; max-width: 400px; margin: 0 auto;">
-            <li>Consultas ilimitadas con Aura</li>
-            <li>Acceso al grupo de Telegram exclusivo</li>
-            <li>Contenido premium sobre tech y automatizaciones</li>
-            <li>Soporte prioritario</li>
-            <li>Solo 9.99€ - ¡Pago único!</li>
+            <li>Chatbot Ilimitado con Aura</li>
+            <li>Acceso Anticipado a nuevos productos</li>
+            <li>Descuentos Exclusivos</li>
+            <li>Comunidad privada y networking</li>
+            <li>**Solo 9,99€ al mes.** ¡Cancela cuando quieras!</li>
         </ul>
         
         <a href="/" class="retry-button">
