--- a/index.html
+++ b/index.html
@@ -283,6 +283,16 @@
       gap: 0.5rem;
     }
 
+    .footer-left a {
+      color: #eafcff;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .footer-left a:hover {
+      color: #00fff7;
+    }
+
     .footer-links {
       display: flex;
       gap: 1rem;
@@ -420,6 +430,344 @@
         max-width: 150px;
       }
     }
+
+    /* Estilos del Chatbot */
+    #chat-button {
+        position: fixed;
+        bottom: 2rem;
+        right: 2rem;
+        background: linear-gradient(135deg, #00fff7 0%, #a259ff 100%);
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        border: none;
+        cursor: pointer;
+        box-shadow: 0 8px 32px rgba(0, 255, 247, 0.3), 0 0 0 2px rgba(162, 89, 255, 0.2);
+        z-index: 1000;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+
+    #chat-button:hover {
+        transform: scale(1.1) rotate(5deg);
+        box-shadow: 0 12px 40px rgba(162, 89, 255, 0.4), 0 0 0 4px rgba(0, 255, 247, 0.3);
+    }
+
+    #chat-button:active {
+        transform: scale(0.95);
+    }
+
+    #chat-button svg {
+        width: 32px;
+        height: 32px;
+        fill: #10131a;
+        transition: transform 0.3s ease;
+    }
+
+    #chat-button:hover svg {
+        transform: scale(1.1);
+    }
+
+    #chat-widget {
+        position: fixed;
+        bottom: 8rem;
+        right: 2rem;
+        width: 380px;
+        max-width: 90vw;
+        height: 500px;
+        background: linear-gradient(135deg, #1a1f2e 0%, #2a3142 100%);
+        border-radius: 20px;
+        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.4), 0 0 0 1px rgba(0, 255, 247, 0.1);
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        z-index: 999;
+        transform: scale(0.9) translateY(20px);
+        opacity: 0;
+        transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        pointer-events: none;
+        backdrop-filter: blur(20px);
+    }
+
+    #chat-widget.open {
+        transform: scale(1) translateY(0);
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    .chat-header {
+        background: linear-gradient(135deg, #00cfff 0%, #a259ff 100%);
+        color: white;
+        padding: 1.2rem 1.5rem;
+        font-weight: 600;
+        text-align: center;
+        position: relative;
+        box-shadow: 0 2px 20px rgba(0, 207, 255, 0.3);
+    }
+
+    .chat-header h2 {
+        margin: 0;
+        font-size: 1.2rem;
+        font-weight: 700;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    .limit-display {
+        font-size: 0.8rem;
+        font-weight: 500;
+        opacity: 0.9;
+        margin-top: 0.3rem;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    }
+    
+    .limit-display.premium {
+        color: #ffd700;
+        text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+    }
+
+    .chat-body {
+        flex-grow: 1;
+        padding: 1.5rem;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        background: rgba(26, 31, 46, 0.8);
+        scrollbar-width: thin;
+        scrollbar-color: #00fff7 #1a1f2e;
+    }
+
+    .chat-body::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    .chat-body::-webkit-scrollbar-track {
+        background: #1a1f2e;
+        border-radius: 3px;
+    }
+
+    .chat-body::-webkit-scrollbar-thumb {
+        background: linear-gradient(180deg, #00fff7 0%, #a259ff 100%);
+        border-radius: 3px;
+    }
+
+    .chat-message {
+        padding: 1rem 1.2rem;
+        border-radius: 18px;
+        max-width: 85%;
+        line-height: 1.5;
+        font-size: 0.95rem;
+        position: relative;
+        animation: messageSlideIn 0.3s ease-out;
+    }
+
+    @keyframes messageSlideIn {
+        from {
+            opacity: 0;
+            transform: translateY(10px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .user-message {
+        background: linear-gradient(135deg, #00fff7 0%, #00cfff 100%);
+        color: #10131a;
+        align-self: flex-end;
+        border-bottom-right-radius: 6px;
+        box-shadow: 0 4px 15px rgba(0, 255, 247, 0.3);
+        font-weight: 500;
+    }
+
+    .bot-message {
+        background: linear-gradient(135deg, #2a3142 0%, #3a4152 100%);
+        color: #eafcff;
+        align-self: flex-start;
+        border-bottom-left-radius: 6px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        border: 1px solid rgba(0, 255, 247, 0.1);
+    }
+
+    .typing-indicator {
+        background: linear-gradient(135deg, #2a3142 0%, #3a4152 100%);
+        color: #eafcff;
+        align-self: flex-start;
+        border-bottom-left-radius: 6px;
+        font-style: italic;
+        opacity: 0.9;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .loader {
+        width: 18px;
+        height: 18px;
+        border: 3px solid rgba(0, 255, 247, 0.2);
+        border-left-color: #00fff7;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+        to { transform: rotate(360deg); }
+    }
+
+    .quick-replies {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.6rem;
+        padding: 0.5rem 0;
+        animation: fadeInUp 0.4s ease-out;
+    }
+
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(10px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .quick-reply-btn {
+        background: transparent;
+        border: 2px solid #00fff7;
+        color: #00fff7;
+        border-radius: 20px;
+        padding: 0.6rem 1.2rem;
+        cursor: pointer;
+        font-size: 0.85rem;
+        font-weight: 500;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        backdrop-filter: blur(10px);
+        white-space: nowrap;
+    }
+
+    .quick-reply-btn:hover {
+        background: linear-gradient(135deg, #00fff7 0%, #00cfff 100%);
+        color: #10131a;
+        transform: translateY(-2px);
+        box-shadow: 0 6px 20px rgba(0, 255, 247, 0.4);
+    }
+
+    .chat-footer {
+        border-top: 1px solid rgba(0, 255, 247, 0.2);
+        padding: 1.2rem;
+        background: rgba(26, 31, 46, 0.9);
+        backdrop-filter: blur(10px);
+    }
+
+    .chat-input-area {
+        position: relative;
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+    }
+
+    #chat-input {
+        flex: 1;
+        padding: 0.8rem 1rem;
+        border: 2px solid rgba(0, 255, 247, 0.3);
+        border-radius: 25px;
+        background: rgba(42, 49, 66, 0.8);
+        color: #eafcff;
+        font-size: 0.95rem;
+        resize: none;
+        outline: none;
+        transition: all 0.3s ease;
+        backdrop-filter: blur(10px);
+        min-height: 20px;
+        max-height: 100px;
+        line-height: 1.4;
+    }
+
+    #chat-input:focus {
+        border-color: #00fff7;
+        box-shadow: 0 0 0 3px rgba(0, 255, 247, 0.1);
+        background: rgba(42, 49, 66, 0.95);
+    }
+
+    #chat-input::placeholder {
+        color: rgba(234, 252, 255, 0.6);
+    }
+
+    .send-button {
+        background: linear-gradient(135deg, #00fff7 0%, #a259ff 100%);
+        border: none;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0 4px 15px rgba(0, 255, 247, 0.3);
+        flex-shrink: 0;
+    }
+
+    .send-button:hover {
+        transform: scale(1.1);
+        box-shadow: 0 6px 20px rgba(162, 89, 255, 0.4);
+    }
+
+    .send-button:active {
+        transform: scale(0.95);
+    }
+
+    .send-button svg {
+        width: 18px;
+        height: 18px;
+        fill: #10131a;
+    }
+
+    .payment-btn {
+        background: linear-gradient(135deg, #f7b733 0%, #fc4a1a 100%);
+        color: white;
+        border: none;
+        border-radius: 12px;
+        padding: 1rem 1.5rem;
+        margin: 1rem auto;
+        cursor: pointer;
+        font-weight: 600;
+        font-size: 0.95rem;
+        display: block;
+        width: fit-content;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0 6px 20px rgba(247, 183, 51, 0.3);
+        text-align: center;
+    }
+
+    .payment-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 8px 25px rgba(252, 74, 26, 0.4);
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+        #chat-widget {
+            width: calc(100vw - 2rem);
+            right: 1rem;
+            left: 1rem;
+            bottom: 6rem;
+        }
+        
+        #chat-button {
+            bottom: 1rem;
+            right: 1rem;
+            width: 60px;
+            height: 60px;
+        }
+    }
   </style>
 </head>
 <body>
@@ -547,7 +895,7 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
-        <span>Developed by DesArroyo.Tech</span>
+        <a href="index.html">Developed by DesArroyo.Tech</a>
       </div>
       <div class="footer-center">
         <div class="footer-links">
@@ -561,6 +909,32 @@
       </div>
     </div>
   </footer>
+
+  <!-- Elementos del Chatbot -->
+  <button id="chat-button" aria-label="Abrir chat de ayuda">
+    <svg viewBox="0 0 24 24" style="width: 32px; height: 32px; fill: #10131a;">
+      <path d="M20 2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h4l4 4 4-4h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"/>
+    </svg>
+  </button>
+  <div id="chat-widget" class="chat-widget">
+      <div class="chat-header">
+          <h2>Aura - Tu Asistente</h2>
+          <div id="limit-display" class="limit-display">Cargando...</div>
+      </div>
+      <div id="chat-body" class="chat-body">
+          <!-- Los mensajes del chat se añadirán aquí -->
+      </div>
+      <div class="chat-footer">
+          <div class="chat-input-area">
+              <textarea id="chat-input" placeholder="Escribe tu mensaje aquí..." rows="1"></textarea>
+              <button class="send-button" id="send-button" aria-label="Enviar mensaje">
+                  <svg viewBox="0 0 24 24">
+                      <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+                  </svg>
+              </button>
+          </div>
+      </div>
+  </div>
 
   <script>
     // Parallax fondo neón
