--- a/index.html
+++ b/index.html
@@ -247,6 +247,29 @@
       z-index: 1000;
       backdrop-filter: blur(10px);
       box-shadow: 0 0 20px #00fff733;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .menu-brand {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .menu-brand img {
+      height: 40px;
+      width: auto;
+      filter: drop-shadow(0 0 10px #00fff7);
+    }
+
+    .menu-brand span {
+      color: #00fff7;
+      font-weight: bold;
+      font-size: 1.2rem;
+      text-shadow: 0 0 8px #00fff7;
+      display: none;
     }
 
     .menu ul {
@@ -254,8 +277,9 @@
       padding: 0;
       margin: 0;
       display: flex;
-      justify-content: center;
       gap: 2rem;
+      align-items: center;
+      flex-wrap: wrap;
     }
 
     .menu a {
@@ -263,25 +287,211 @@
       text-decoration: none;
       font-weight: 500;
       transition: color 0.3s;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      font-size: 1.1rem;
+      white-space: nowrap;
     }
 
     .menu a:hover {
       color: #00fff7;
       text-shadow: 0 0 8px #00fff7;
+      background: rgba(0, 255, 247, 0.1);
     }
 
-    /* Secciones */
-    section {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      padding: 6rem 2rem;
+    /* Menú hamburguesa */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0.5rem;
+      z-index: 1001;
     }
 
-    .section-content {
-      max-width: 800px;
-      margin: auto;
-      text-align: center;
+    .hamburger span {
+      width: 25px;
+      height: 3px;
+      background: #00fff7;
+      margin: 3px 0;
+      transition: 0.3s;
+      border-radius: 2px;
+      box-shadow: 0 0 5px #00fff7;
+    }
+
+    .hamburger.active span:nth-child(1) {
+      transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .hamburger.active span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .hamburger.active span:nth-child(3) {
+      transform: rotate(45deg) translate(-5px, -6px);
+    }
+
+    /* Responsive móvil */
+    @media (max-width: 768px) {
+      .menu {
+        padding: 0.5rem 1rem;
+      }
+
+      .menu-brand span {
+        display: none;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+
+      .menu ul {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 280px;
+        height: 100vh;
+        background: rgba(24, 28, 38, 0.98);
+        backdrop-filter: blur(20px);
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 5rem 2rem 2rem;
+        transition: right 0.3s ease;
+        box-shadow: -5px 0 20px rgba(0, 255, 247, 0.2);
+        border-left: 1px solid #00fff7;
+        overflow-y: auto;
+        gap: 1.2rem;
+      }
+
+      .menu ul.active {
+        right: 0;
+      }
+
+      .menu ul li {
+        width: 100%;
+        margin: 0.5rem 0;
+      }
+
+      .menu ul a {
+        display: block;
+        width: 100%;
+        padding: 1rem;
+        border-radius: 8px;
+        font-size: 1.1rem;
+        border: 1px solid transparent;
+        transition: all 0.3s ease;
+      }
+
+      .menu ul a:hover {
+        background: rgba(0, 255, 247, 0.15);
+        border-color: #00fff7;
+        transform: translateX(5px);
+      }
+
+      /* Overlay para cerrar menú */
+      .menu-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s ease;
+      }
+
+      .menu-overlay.active {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      /* Ajustes responsive generales */
+      .container {
+        padding: 1rem;
+      }
+
+      section {
+        padding: 4rem 1rem;
+        min-height: auto;
+      }
+
+      .section-content {
+        padding: 0;
+      }
+
+      h1 {
+        font-size: 2rem;
+        line-height: 1.3;
+      }
+
+      h2 {
+        font-size: 1.8rem;
+      }
+
+      .logo-img {
+        max-width: 250px;
+      }
+
+      .btn {
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
+        width: 100%;
+        max-width: 300px;
+      }
+
+      .precios-grid {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+      }
+
+      .plan-card {
+        padding: 1.5rem;
+      }
+
+      .testimonios-grid {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+      }
+
+      .footer-content {
+        flex-direction: column;
+        gap: 1rem;
+        text-align: center;
+        padding: 1rem;
+      }
+
+      .footer-links {
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .menu ul {
+        width: 100%;
+        right: -100%;
+      }
+
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      .logo-img {
+        max-width: 200px;
+      }
+
+      .btn {
+        padding: 0.7rem 1.2rem;
+        font-size: 0.9rem;
+      }
     }
 
     /* Testimonios */
@@ -998,7 +1208,18 @@
   <div id="parallax-bg"></div>
   <main>
   <nav class="menu" role="navigation" aria-label="Menú principal">
-    <ul>
+    <div class="menu-brand">
+      <img src="img/favicon.ico" alt="DesArroyo Tech" />
+      <span>DesArroyo.Tech</span>
+    </div>
+    
+    <button class="hamburger" aria-label="Abrir menú" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    
+    <ul id="menu-items">
       <li><a href="#inicio" aria-label="Ir a sección Inicio">Inicio</a></li>
       <li><a href="#precios" aria-label="Ir a la sección de precios">Planes y Precios</a></li>
       <li><a href="#automatizaciones" aria-label="Ir a sección Automatizaciones">Automatizaciones</a></li>
@@ -1008,6 +1229,8 @@
       <li><a href="#contacto" aria-label="Ir a sección Contacto">Contacto</a></li>
     </ul>
   </nav>
+  
+  <div class="menu-overlay" id="menu-overlay"></div>
 
   <section id="inicio">
     <div class="section-content fade-in-section">
@@ -1275,6 +1498,40 @@
   </div>
 
   <script>
+    // Menú hamburguesa
+    const hamburger = document.getElementById('hamburger');
+    const menuItems = document.getElementById('menu-items');
+    const menuOverlay = document.getElementById('menu-overlay');
+
+    function toggleMenu() {
+      hamburger.classList.toggle('active');
+      menuItems.classList.toggle('active');
+      menuOverlay.classList.toggle('active');
+      document.body.style.overflow = menuItems.classList.contains('active') ? 'hidden' : '';
+    }
+
+    hamburger.addEventListener('click', toggleMenu);
+    menuOverlay.addEventListener('click', toggleMenu);
+
+    // Cerrar menú al hacer clic en enlaces
+    document.querySelectorAll('#menu-items a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth <= 768) {
+          toggleMenu();
+        }
+      });
+    });
+
+    // Cerrar menú al redimensionar ventana
+    window.addEventListener('resize', () => {
+      if (window.innerWidth > 768) {
+        hamburger.classList.remove('active');
+        menuItems.classList.remove('active');
+        menuOverlay.classList.remove('active');
+        document.body.style.overflow = '';
+      }
+    });
+
     // Parallax fondo neón
     const parallaxBg = document.getElementById('parallax-bg');
     document.addEventListener('mousemove', function(e) {
@@ -1307,18 +1564,31 @@
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       anchor.addEventListener('click', function (e) {
         e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+          const offsetTop = target.offsetTop - 80; // Ajuste para el menú fijo
+          window.scrollTo({
+            top: offsetTop,
+            behavior: 'smooth'
+          });
+        }
       });
     });
 
     // Scroll down button functionality
-    document.querySelector('.scroll-down').addEventListener('click', function() {
-      document.querySelector('#servicios').scrollIntoView({
-        behavior: 'smooth'
+    const scrollDownBtn = document.querySelector('.scroll-down');
+    if (scrollDownBtn) {
+      scrollDownBtn.addEventListener('click', function() {
+        const serviciosSection = document.querySelector('#servicios');
+        if (serviciosSection) {
+          const offsetTop = serviciosSection.offsetTop - 80;
+          window.scrollTo({
+            top: offsetTop,
+            behavior: 'smooth'
+          });
+        }
       });
-    });
+    }
 
     // Gestión de Cookies
     function showCookieBanner() {
@@ -1351,6 +1621,32 @@
 
     // Mostrar banner al cargar la página
     document.addEventListener('DOMContentLoaded', showCookieBanner);
+
+    // Mejoras de accesibilidad
+    document.addEventListener('keydown', function(e) {
+      // ESC para cerrar menú
+      if (e.key === 'Escape' && menuItems.classList.contains('active')) {
+        toggleMenu();
+      }
+    });
+
+    // Lazy loading para imágenes
+    if ('IntersectionObserver' in window) {
+      const imageObserver = new IntersectionObserver((entries, observer) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            const img = entry.target;
+            img.src = img.dataset.src;
+            img.classList.remove('lazy');
+            imageObserver.unobserve(img);
+          }
+        });
+      });
+
+      document.querySelectorAll('img[data-src]').forEach(img => {
+        imageObserver.observe(img);
+      });
+    }
   </script>
 
   <!-- Banner de Cookies -->
