Fix: el menú nunca tapa el logo cuadrado en escritorio ni móvil, y el texto DesArroyo.Tech solo se oculta en móvil en automatizaciones

--- a/generador_automatizaciones.html
+++ b/generador_automatizaciones.html
@@ -845,7 +845,7 @@
             }
 
             .menu-brand span {
-                display: inline;
+                display: none !important;
             }
         }
 
@@ -864,6 +864,10 @@
                 margin-left: auto;
                 margin-right: auto;
             }
+        }
+
+        main, .container, body > main {
+            padding-top: 90px !important;
         }
     </style>
 </head>
