--- a/index.html
+++ b/index.html
@@ -1202,6 +1202,10 @@
       gap: 2rem;
       flex-wrap: wrap;
     }
+
+    main, .container, body > main {
+      padding-top: 90px !important;
+    }
   </style>
 </head>
 <body>
